Lagt til Bean og Container Managed Tranasction håndtering
[git-p4: depot-paths = "//skif/SkifKode/trunk/": change = 36353]